--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,23 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.App{
+	height:100vh;
+	display: flex;
+  flex-direction: column;
+  /* width: 100%; */
+  /* height:100%; */
+	/* display: flex;
+  flex-direction: column; */
+}
+
+.main {
+	display: flex;
+	height:100%;
+	/* flex-direction; */
+
+}
+.container{
+	width:100%;
+}
