--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -5,7 +5,8 @@
 .navbtn{
   width:50px;
   height:19px;
-  margin-right:-40px;
+  /* margin-right:-40px; */
+  margin-left: 70px;
   margin-top:30px;
 }
 .arrowbtn,
@@ -20,6 +21,7 @@
   justify-content: center;
   /* margin-right: -20px; */
   padding:2px 4px 3px 5px;
+  font-size: 10px;
 
 }
 
